--- a/src/pages/ReportListPage.css
+++ b/src/pages/ReportListPage.css
@@ -54,7 +54,7 @@
   position: relative;
   overflow: hidden;
   box-shadow: 0 4px 20px rgba(130, 82, 233, 0.3);
-  margin-bottom: 20px;
+  border-radius: 10px;
   padding-top: 25px;
   padding-bottom: 25px;
 }
