--- a/src/pages/ReviewPage.css
+++ b/src/pages/ReviewPage.css
@@ -33,28 +33,6 @@
   outline: none;
 }
 
-.radio-group {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 15px;
-  margin-bottom: 15px;
-}
-
-.radio-option {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  background-color: white;
-  padding: 8px 15px;
-  border-radius: 30px;
-  transition: all 0.3s ease;
-  border: 1px solid #e0e0e0;
-}
-
-.radio-option:hover {
-  background-color: #f5f5f5;
-  border-color: #333;
-}
 
 .radio-option input[type="radio"] {
   cursor: pointer;
@@ -127,64 +105,15 @@
   outline: none;
 }
 
-.submit-btn {
-  background-color: #333;
-  border: none;
-  border-radius: 25px;
-  color: white;
-  padding: 14px 30px;
-  font-weight: 600;
-  font-size: 1.1rem;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  display: block;
-  margin: 30px auto 0;
-  min-width: 250px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-}
 
-.submit-btn:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-}
-
-.submit-btn:active {
-  transform: translateY(0);
-}
-
-/* Responsive styles */
-/* @media (max-width: 768px) {
-  .review-container {
-    padding: 10px;
-    align-items: flex-start;
-  }
-
-  .review-form {
-    padding: 20px;
-    margin-top: 50px;
-    width: 100%;
-    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.05);
-  }
-
-  .form-section {
-    padding: 15px;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
-  }
-
-  .radio-group {
-    flex-direction: column;
-    gap: 10px;
-  }
-
-  .radio-option {
-    width: 100%;
-  }
+ 
+@media screen and (max-width: 575px) {
+  
 
   .submit-btn {
     width: 100%;
-    padding: 12px 20px;
   }
-
+/*
   .review-form h1 {
     font-size: 1.5rem;
     font-weight: 700;
@@ -193,5 +122,5 @@
   .form-section h2 {
     font-size: 0.9rem;
     font-weight: 700;
-  }
-} */
+  }*/
+} 
