--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11194,6 +11194,11 @@ h6,
   border-color: var(--success-600) !important;
 }
 
+table.dataTable > tbody > tr:nth-child(even) > td,
+.table.dataTable > tbody > tr:nth-child(even) > th {
+  background-color: #f5f5f5 !important;
+}
+
 @media (max-width: 600px) {
   .dataTable {
     table-layout: fixed !important;
@@ -11202,13 +11207,16 @@ h6,
   }
   .dataTable th,
   .dataTable td {
-    padding: 2px 1px !important;
+    padding: 2px 0.5px !important;
     font-size: 11px !important;
     white-space: normal !important;
     word-break: break-word !important;
     text-align: center !important;
     width: 25% !important;
     max-width: 25% !important;
+    height: 36px; 
+    vertical-align: middle !important;
+    font-size: 13px !important;
   }
 }
 
