--- a/public/assets/css/extra.css
+++ b/public/assets/css/extra.css
@@ -214,3 +214,7 @@ table.dataTable td.dt-type-date {
   width: 100%;
   height: 100vh;
 }
+
+.summary-row-bg td{
+  background-color: #fffbe6 !important;
+}
