--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -15965,7 +15965,8 @@ body .form-control.is-valid,
 .floors-grid {
   display: grid;
   gap: 0.75rem; 
-  grid-template-columns: repeat(auto-fill, minmax(70px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(calc(20% - 0.6rem), 1fr));
+  min-width: 0;
 }
 .line-bg-danger::before {
   background-color: var(--danger-600);
@@ -16000,8 +16001,7 @@ body .form-control.is-valid,
 }
 
 .floor-text-height {
-  min-height: 104px;
-
+  /* min-height: 80px; */
 }
 
 .d-contents {
